[package]
name = "price"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
crossterm = "0.29.0"
eventsource-client = "0.15.0"
futures = "0.3.31"
lazy_static = "1.5.0"
once_cell = "1.21.3"
ratatui = "0.29.0"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
rust_decimal = "1.38.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
