[package]
name = "price"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
colored = "3.0.0"
crossterm = "0.29.0"
eventsource-client = "0.16.1"
futures = "0.3.31"
lazy_static = "1.5.0"
once_cell = "1.21.3"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
