[package]
name = "price"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
chrono-tz = "0.10"
colored = "3.1.1"
crossterm = "0.29.0"
eventsource-client = "0.17.5"
futures = "0.3.32"
launchdarkly-sdk-transport = { version = "0.1.3", features = ["hyper-rustls-webpki-roots"] }
lazy_static = "1.5.0"
once_cell = "1.21.4"
ratatui = "0.30.1"
reqwest = { version = "0.13.4", features = ["json"] }
rust_decimal = "1.42.1"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
